
[project]
name = "ablator"
version = "0.0.1b2"
authors = [{ name = "Iordanis Fostiropoulos", email = "mail@iordanis.me" }]
readme = "README.md"
license = {file = "LICENSE"}
description = "Model Ablation Tool-Kit"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.25.2,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "torch>=2.0.1,<3.0.0",
    "torchvision>=0.15.2,<1.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "tensorboardX>=2.6.2,<3.0.0",
    "matplotlib>=3.7.2,<4.0.0",
    "omegaconf>=2.3.0,<3.0.0",
    "scipy>=1.11.1,<2.0.0",
    "setproctitle>=1.3.2,<2.0.0",
    # ray default as we need to use the state API
    # keeping it fixed as the API changes a lot between versions.
    "ray>=2.6.1,<3.0.0",
    # TODO when to migrate from "pydantic<2" to >2 https://github.com/ray-project/ray/issues/37019
    "pydantic>=2.1.1,<3.0.0",
    "pynvml>=11.5.0,<12.0.0",
    "optuna>=3.2.0,<4.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "seaborn>=0.12.2,<1.0.0",
    "numpydoc>=1.5.0,<2.0.0",
    "paramiko>=3.3.1,<4.0.0",
    "gpustat>=1.1,<2.0" # must stay fixed because https://github.com/ray-project/ray/issues/35384
]

[project.optional-dependencies]
dev = [
    "mypy>=1.4.1,<2.0.0",
    "pytest>=7.4.0,<8.0.0",
    "black>=23.7.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "pylint>=2.17.5,<3.0.0",
    "tensorboard>=2.13.0,<3.0.0",
    "mock>=5.1.0,<6.0.0",
    "types-tabulate>=0.9.0.3,<1.0.0",
    "types-paramiko>=3.3.0.0,<4.0.0",
    "docker>=6.1.3,<7.0.0",
    "pytest-xdist>=3.3.1,<4.0.0",
    "pytest-order>=1.1.0,<2.0.0",
    "pytest-rerunfailures>=12.0,<13.0",
    "pydoclint>=0.1.4,<0.2.0"
]



[tool.setuptools]
py-modules = ["ablator"]

[project.urls]
homepage = "https://ablator.org"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
