[project]
name = "ablator"
version = "0.0.1b2"
authors = [{ name = "Iordanis Fostiropoulos", email = "mail@iordanis.me" }]
readme = "README.md"
license = {file = "LICENSE"}
description = "Model Ablation Tool-Kit"
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch>=1.0.0",
    "numpy>=1.0.3",
    "pandas>=1.0.0",
    "scikit-learn>=1.2.0",
    "torchvision>=0.12.0",
    "tqdm>=4.1.0",
    "tensorboardX>=2.0",
    "matplotlib>=3.0.0",
    "omegaconf>=2.0.1",
    "scipy>=1.0.0",
    "setproctitle>=1.0.1",
    # ray default as we need to use the state API
    # keeping it fixed as the API changes a lot between versions.
    "ray>=2.2.0",
    "pydantic>=1.1.1",
    "pynvml>=11.0.0",
    "optuna>=3.0.0",
    "tabulate>=0.3.0",
    "seaborn>=0.1",
    "numpydoc>=1.0.0",
    "paramiko>=3.0.0",
    "gpustat>=1.0",
    "windows-curses; platform_system=='Windows'"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>5.0.0",
    "black>=22.1.0",
    "flake8>=3.0.0",
    "pylint>=2.0.0",
    "tensorboard>=1.9.0",#
    "mock>=3.0.0",
    "types-tabulate>=0.7",
    "types-paramiko>=2.0.0",
    "docker>=3.0.0",
    "pytest-xdist>=2.0.0",
    "pytest-order>=0.7.1",
    "pytest-rerunfailures>=5.0",
    "pydoclint>=0.1.0"
]



[tool.setuptools]
py-modules = ["ablator"]

[project.urls]
homepage = "https://ablator.org"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"